// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TxStatus /> render TxStatus 0 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Status
    </span>
  </div>
  <div
    className="flex items-center gap-1 px-2 rounded-xs max-w-max min-w-min h-6 text-gray-200 "
    style={
      Object {
        "backgroundColor": "#00b3ff",
      }
    }
  >
    <span
      aria-label="clock-circle"
      className="anticon anticon-clock-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm176.5 585.7l-28.6 39a7.99 7.99 0 01-11.2 1.7L483.3 569.8a7.92 7.92 0 01-3.3-6.5V288c0-4.4 3.6-8 8-8h48.1c4.4 0 8 3.6 8 8v247.5l142.6 103.1c3.6 2.5 4.4 7.5 1.8 11.1z"
        />
      </svg>
    </span>
    <span
      className="h-full"
    >
      pending
    </span>
  </div>
</div>
`;

exports[`<TxStatus /> render TxStatus 1 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Status
    </span>
  </div>
  <div
    className="flex items-center gap-1 px-2 rounded-xs max-w-max min-w-min h-6 text-gray-200 "
    style={
      Object {
        "backgroundColor": "#00AA76",
      }
    }
  >
    <span
      aria-label="check-circle"
      className="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
    <span
      className="h-full"
    >
      success
    </span>
  </div>
</div>
`;

exports[`<TxStatus /> render TxStatus 2 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Status
    </span>
  </div>
  <div
    className="flex items-center gap-1 px-2 rounded-xs max-w-max min-w-min h-6 text-gray-200 "
    style={
      Object {
        "backgroundColor": "#EC9D00",
      }
    }
  >
    <span
      aria-label="close-circle"
      className="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
    <span
      className="h-full"
    >
      reverted
    </span>
  </div>
</div>
`;

exports[`<TxStatus /> should render pending status default 1`] = `
<div
  className="flex flex-wrap md:items-center gap-2 md:gap-16 my-3 md:my-6"
>
  <div
    className="w-36 flex items-center gap-2"
  >
    <span
      aria-label="info-circle"
      className="anticon anticon-info-circle cursor-help"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="info-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span
      className="capitalize"
    >
      Status
    </span>
  </div>
  <div
    className="flex items-center gap-1 px-2 rounded-xs max-w-max min-w-min h-6 text-gray-200 "
    style={
      Object {
        "backgroundColor": "#00b3ff",
      }
    }
  >
    <span
      aria-label="clock-circle"
      className="anticon anticon-clock-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm176.5 585.7l-28.6 39a7.99 7.99 0 01-11.2 1.7L483.3 569.8a7.92 7.92 0 01-3.3-6.5V288c0-4.4 3.6-8 8-8h48.1c4.4 0 8 3.6 8 8v247.5l142.6 103.1c3.6 2.5 4.4 7.5 1.8 11.1z"
        />
      </svg>
    </span>
    <span
      className="h-full"
    >
      pending
    </span>
  </div>
</div>
`;
